Replace deprecated `URL` constructors with the `URI` class and `URI.toURL()`